# hdfs-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
libdirent/: README.md
libdirent/include/: dirent.h
libhdfs/hdfs_3_3/os/windows/: hack.h  platform.h
src/: hdfs_2_10.rs  hdfs_2_2.rs  hdfs_2_3.rs  hdfs_2_4.rs  hdfs_2_5.rs  hdfs_2_6.rs  hdfs_2_7.rs  hdfs_2_8.rs  hdfs_2_9.rs  hdfs_3_0.rs  hdfs_3_1.rs  hdfs_3_2.rs  hdfs_3_3.rs  lib.rs  tests.rs
