[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Bindings to HDFS Native C API"
documentation = "https://docs.rs/hdfs-sys"
edition = "2021"
license = "Apache-2.0"
name = "hdfs-sys"
repository = "https://github.com/Xuanwo/hdrs"
version = "0.2.0"
links = "hdfs"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["hdfs_2_6"]
hdfs_2_2 = []
hdfs_2_3 = ["hdfs_2_2"]
hdfs_2_4 = ["hdfs_2_3"]
hdfs_2_5 = ["hdfs_2_4"]
hdfs_2_6 = ["hdfs_2_5"]
hdfs_2_7 = ["hdfs_2_6"]
hdfs_2_8 = ["hdfs_2_7"]
hdfs_2_9 = ["hdfs_2_8"]
hdfs_2_10 = ["hdfs_2_9"]
hdfs_3_0 = ["hdfs_2_10"]
hdfs_3_1 = ["hdfs_3_0"]
hdfs_3_2 = ["hdfs_3_1"]
hdfs_3_3 = ["hdfs_3_2"]

vendored = []

[build-dependencies]
cc = "1.0.73"
java-locator = "0.1.5"
